[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ItemSpawner.gd" type="Script" id=1]

[node name="ItemSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Point1" type="Node2D" parent="."]

[node name="Point2" type="Node2D" parent="."]

[node name="Point3" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
